--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -62,9 +62,8 @@ instructions](https://www.acm.org/publications/proceedings-template).
 #### Workshop Organisers
 
 - [Qinghua Lu](https://people.csiro.au/L/Q/Qinghua-Lu), CSIRO, Australia, <qinghua.lu@data61.csiro.au>
-<!-- - [Apostol Vassilev](https://www.nist.gov/people/apostol-vassilev), NIST, USA, <apostol.vassilev@nist.gov>
-- [Foutse Khomh](https://www.polymtl.ca/expertises/en/khomh-foutse), Polytechnique Montréal, Canada, <foutse.khomh@polymtl.ca>
-- [Maximilian Poretschkin](https://de.linkedin.com/in/maximilian-poretschkin-00137a161), Fraunhofer IAIS, Germany, <maximilian.poretschkin@iais.fraunhofer.de> -->
+
+TBA
 
 
 #### Program Committee
