--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -11,16 +11,16 @@ title: RAIE 2025
 
 ### Theme & Goals
 
-The rapid advancements in advanced AI, exemplified by the release of ChatGPT and other large language model (LLM)-based chatbots, have garnered significant global attention and raised substantial concerns regarding responsible AI and AI safety. The opaque nature and swift progress of AI technologies necessitate that AI systems are developed and used responsibly throughout their entire lifecycle and are trusted by the humans who rely on them.
+The rapid advancements in AI, particularly the release of large language models (LLMs) and their applications, have attracted significant global interest and raised substantial concerns on responsible AI and AI safety. While LLMs are impressive examples of AI models, it is the compound AI systems, which integrate these models with other key components for function and quality/risk control, that are ultimately deployed and have real-world impact. These AI systems, especially autonomous LLM agents and those involving multi--agent interacting, require careful system-level engineering to ensure responsible AI and AI safety. 
 
-In recent years, numerous regulations, principles, and guidelines for responsible AI and AI safety have been issued by governments, research organizations, and enterprises. However, they are typically very high-level and do not provide concrete guidance for technologists on how to implement responsible and safe AI. Developing responsible AI systems goes beyond fixing traditional software code "bugs" and providing theoretical guarantees for algorithms. New and improved software/AI engineering approaches are required to ensure that AI systems are trustworthy throughout their entire lifecycle and trusted by those who use and rely on them.
+In recent years, numerous regulations, principles, and guidelines for responsible AI and AI safety have been issued by governments, research organizations, and enterprises. However, they are typically very high-level and do not provide concrete guidance for technologists on how to implement responsible and safe AI. Developing responsible AI systems goes beyond fixing traditional software code "bugs" and providing theoretical guarantees for algorithms. New and improved software/AI engineering approaches are required to ensure that AI systems are trustworthy and safe throughout their entire lifecycle and trusted by those who use and rely on them.
 
-Achieving responsible AI engineering—building adequate software engineering tools to support the responsible development of AI systems—requires a comprehensive understanding of human expectations and the utilization context of AI systems. This workshop aims to bring together researchers and practitioners not only in software engineering and AI but also ethicists, and experts from social sciences and regulatory bodies to build a community that will tackle the responsible AI engineering challenges practitioners face in developing responsible and safe AI systems. Traditional software engineering methods are not sufficient to tackle the unique challenges posed by advanced AI technologies. This workshop will provide valuable insights into how software engineering can evolve to meet these challenges, focusing on aspects such as requirement engineering, architecture and design, verification and validation, and operational processes like DevOps and AgentOps. By bringing together experts from various fields, the workshop aims to foster interdisciplinary collaboration that will drive the advancement of responsible AI engineering practices.
+Achieving responsible AI engineering—building adequate software engineering tools to support the responsible development of AI systems—requires a comprehensive understanding of human expectations and the utilization context of AI systems. This workshop aims to bring together researchers and practitioners not only in software engineering and AI but also ethicists, and experts from social sciences and regulatory bodies to build a community that will tackle the responsible/safe AI engineering challenges practitioners face in developing responsible and safe AI systems. Traditional software engineering methods are not sufficient to tackle the unique challenges posed by advanced AI technologies. This workshop will provide valuable insights into how software engineering can evolve to meet these challenges, focusing on aspects such as requirement engineering, architecture and design, verification and validation, and operational processes like DevOps and AgentOps. By bringing together experts from various fields, the workshop aims to foster interdisciplinary collaboration that will drive the advancement of responsible AI and AI safety engineering practices.
 
 The primary objectives of this workshop are to:
 
-1. Share cutting-edge software/AI engineering methods, techniques, tools, and real-world case studies that can help operationalize responsible and safe AI.
-2. Facilitate discussions among researchers and practitioners from diverse fields, including software engineering, AI, ethics, social sciences, and regulatory bodies, to address the responsible AI engineering challenges.
+1. Share cutting-edge software/AI engineering methods, techniques, tools, and real-world case studies that can help ensure responsible AI and AI safety.
+2. Facilitate discussions among researchers and practitioners from diverse fields, including software engineering, AI, ethics, social sciences, and regulatory bodies, to address the responsible AI and AI safety engineering challenges.
 3. Promote the development of new and improved software/AI engineering approaches to ensure AI systems are trustworthy and trusted throughout their lifecycle.
 
 
@@ -28,16 +28,16 @@ The primary objectives of this workshop are to:
 
 Topics of interests include, but are not limited to:
 
-- Requirement engineering for responsible AI
-- Software architecture and design of responsible AI systems
-- Verification and validation for responsible AI systems
-- DevOps, MLOps, LLMOps, AgentOps for responsible and safe AI systems
-- Development processes for responsible AI systems
-- Responsible AI governance, assessment tools and techniques
+- Requirement engineering for responsible AI and AI safety
+- Responsible-AI-by-design and AI-safety-by-design software architecture
+- Verification and validation for responsible AI and AI safety
+- DevOps, MLOps, LLMOps, AgentOps for ensuring responsible AI and AI safety
+- Development processes for responsible and safe AI systems
+- Responsible AI and AI safety governance, assessment tools and techniques
 - Reproducibility and traceability of AI systems
 - Trust and trustworthiness of AI systems
-- Human aspect of responsible AI engineering
-- Responsible AI engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
+- Human aspect of responsible AI and AI safety engineering
+- Responsible AI and AI safety engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
 - Case studies from certain high priority domains (e.g., financial services, science discovery, health, environment, energy)
 
 
@@ -64,7 +64,13 @@ Other detailed submission policies and guidelines for RAIE'25 are in line with t
 ### Organizing Committee
 
 #### Workshop Organisers
-TBA
+**Qinghua Lu** - *CSIRO's Data61*, Sydney, Australia ([qinghua.lu@data61.csiro.au](mailto:qinghua.lu@data61.csiro.au))  
+
+**Foutse Khomh** - *Polytechnique Montreal*, Montreal, Quebec, Canada ([foutse.khomh@polymtl.ca](mailto:foutse.khomh@polymtl.ca))
+
+**Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
+
+**Maximilian Poretschkin** - *Fraunhofer*, Sankt Augustin, Germany ([maximilian.poretschkin@iais.fraunhofer.de](mailto:maximilian.poretschkin@iais.fraunhofer.de))
 
 
 #### Program Committee
