--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -64,13 +64,13 @@ Other detailed submission policies and guidelines for RAIE'25 are in line with t
 ### Organizing Committee
 
 #### Workshop Organisers
-**Qinghua Lu** - *CSIRO's Data61*, Sydney, Australia ([qinghua.lu@data61.csiro.au](mailto:qinghua.lu@data61.csiro.au))  
+- **Qinghua Lu** - *CSIRO's Data61*, Sydney, Australia ([qinghua.lu@data61.csiro.au](mailto:qinghua.lu@data61.csiro.au))  
 
-**Foutse Khomh** - *Polytechnique Montreal*, Montreal, Quebec, Canada ([foutse.khomh@polymtl.ca](mailto:foutse.khomh@polymtl.ca))
+- **Foutse Khomh** - *Polytechnique Montreal*, Montreal, Quebec, Canada ([foutse.khomh@polymtl.ca](mailto:foutse.khomh@polymtl.ca))
 
-**Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
+- **Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
 
-**Maximilian Poretschkin** - *Fraunhofer*, Sankt Augustin, Germany ([maximilian.poretschkin@iais.fraunhofer.de](mailto:maximilian.poretschkin@iais.fraunhofer.de))
+- **Maximilian Poretschkin** - *Fraunhofer*, Sankt Augustin, Germany ([maximilian.poretschkin@iais.fraunhofer.de](mailto:maximilian.poretschkin@iais.fraunhofer.de))
 
 
 #### Program Committee
