--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -68,6 +68,7 @@ Other detailed submission policies and guidelines for RAIE'25 are in line with t
 - **Foutse Khomh** - *Polytechnique Montreal*, Montreal, Quebec, Canada ([foutse.khomh@polymtl.ca](mailto:foutse.khomh@polymtl.ca))
 - **Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
 - **Maximilian Poretschkin** - *Fraunhofer*, Sankt Augustin, Germany ([maximilian.poretschkin@iais.fraunhofer.de](mailto:maximilian.poretschkin@iais.fraunhofer.de))
+- **Muneera Bano** - *CSIRO's Data61*, Melbourne, Australia ([muneera.bano@data61.csiro.au](mailto:muneera.bano@data61.csiro.au))
 
 
 #### Program Committee
