--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -11,9 +11,11 @@ title: RAIE 2025
 
 ### Theme & Goals
 
-The rapid advancements in AI, particularly the release of large language models (LLMs) and their applications, have attracted significant global interest and raised substantial concerns on responsible AI and AI safety. While LLMs are impressive examples of AI models, it is the compound AI systems, which integrate these models with other key components for function and quality/risk control, that are ultimately deployed and have real-world impact. These AI systems, especially autonomous LLM agents and those involving multi--agent interacting, require careful system-level engineering to ensure responsible AI and AI safety. 
+The rapid advancements in AI, particularly the release of large language models (LLMs) and their applications, have attracted significant global interest and raised substantial concerns on responsible AI and AI safety. While LLMs are impressive examples of AI models, it is the compound AI systems, which integrate these models with other key components for function and quality/risk control, that are ultimately deployed and have real-world impact. These AI systems, especially autonomous LLM agents and those involving multi-agent interacting, require careful system-level engineering to ensure responsible AI and AI safety. 
 
 In recent years, numerous regulations, principles, and guidelines for responsible AI and AI safety have been issued by governments, research organizations, and enterprises. However, they are typically very high-level and do not provide concrete guidance for technologists on how to implement responsible and safe AI. Developing responsible AI systems goes beyond fixing traditional software code "bugs" and providing theoretical guarantees for algorithms. New and improved software/AI engineering approaches are required to ensure that AI systems are trustworthy and safe throughout their entire lifecycle and trusted by those who use and rely on them.
+
+Diversity and inclusion principles in AI are crucial for ensuring that the technology fairly represents and benefits all segments of society, preventing biases that can lead to discrimination and inequality. By incorporating diverse perspectives within data, process, system, and governance of the AI eco-system, AI systems can be more innovative, ethical, and effective in addressing the needs of diverse and especially under-represented users. This commitment to diversity and inclusion also ensures responsible and ethical AI development by fostering transparency, accountability, and trustworthiness, thereby safeguarding against unintended harmful consequences and promoting societal well-being.
 
 Achieving responsible AI engineering—building adequate software engineering tools to support the responsible development of AI systems—requires a comprehensive understanding of human expectations and the utilization context of AI systems. This workshop aims to bring together researchers and practitioners not only in software engineering and AI but also ethicists, and experts from social sciences and regulatory bodies to build a community that will tackle the responsible/safe AI engineering challenges practitioners face in developing responsible and safe AI systems. Traditional software engineering methods are not sufficient to tackle the unique challenges posed by advanced AI technologies. This workshop will provide valuable insights into how software engineering can evolve to meet these challenges, focusing on aspects such as requirement engineering, architecture and design, verification and validation, and operational processes like DevOps and AgentOps. By bringing together experts from various fields, the workshop aims to foster interdisciplinary collaboration that will drive the advancement of responsible AI and AI safety engineering practices.
 
@@ -28,17 +30,20 @@ The primary objectives of this workshop are to:
 
 Topics of interests include, but are not limited to:
 
-- Requirement engineering for responsible AI and AI safety
-- Responsible-AI-by-design and AI-safety-by-design software architecture
-- Verification and validation for responsible AI and AI safety
-- DevOps, MLOps, LLMOps, AgentOps for ensuring responsible AI and AI safety
-- Development processes for responsible and safe AI systems
-- Responsible AI and AI safety governance, assessment tools and techniques
-- Reproducibility and traceability of AI systems
-- Trust and trustworthiness of AI systems
-- Human aspect of responsible AI and AI safety engineering
-- Responsible AI and AI safety engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
-- Case studies from certain high priority domains (e.g., financial services, science discovery, health, environment, energy)
+ - Requirement engineering for responsible AI and AI safety
+ - Responsible-AI-by-design and AI-safety-by-design software architecture
+ - Verification and validation for responsible AI and AI safety
+ - DevOps, MLOps, LLMOps, AgentOps for ensuring responsible AI and AI safety
+ - Development processes for responsible and safe AI systems
+ - Responsible AI and AI safety evaluation tools and techniques
+ - Reproducibility and traceability of AI systems
+ - Trust and trustworthiness of AI systems
+ - Responsible AI and AI safety governance
+ - Diversity and Inclusion in Responsible AI ecosystem; humans, data, processes/algorithms, systems, governance
+ - Operationalisation of laws (e.g., EU AI Act) and standards
+ - Human aspect of responsible AI and AI safety engineering
+ - Responsible AI and AI safety engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
+ - Case studies from certain high priority domains (e.g., financial services, science discovery, health, environment, energy)
 
 
 **Two types of contributions will be considered:**
