--- a/RAIE2025.md
+++ b/RAIE2025.md
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: RAIE 2025
+title: RAIE 2026
 ---
 
 <!-- <p><img src="/img/pierrebourque.jpg" width="200" /><a href="https://profs.etsmtl.ca/pbourque">Pierre Bourque</a> - ing., Ph.D.</p> -->
 
-# 3rd International Workshop on Responsible AI Engineering (RAIE'25)
+# 4th International Workshop on Responsible AI Engineering (RAIE'26)
 
-***Co-located with [47th International Conference on Software Engineering (ICSE 2025)](https://conf.researchr.org/home/icse-2025), Ottawa, Ontario, Canada, April 27-May 3, 2025***
+***Co-located with [48th International Conference on Software Engineering (ICSE 2026)](https://conf.researchr.org/home/icse-2026), Rio de Janeiro, Brazil, April 12-18, 2026***
 
 ### Theme & Goals
 
@@ -42,38 +42,38 @@ Topics of interests include, but are not limited to:
  - Diversity and Inclusion in Responsible AI ecosystem; humans, data, processes/algorithms, systems, governance
  - Operationalisation of laws (e.g., EU AI Act) and standards
  - Human aspect of responsible AI and AI safety engineering
+ - Evaluation of AI agent behaviors and the consequences, reasoning reliability and risk analysis
+ - Human-AI interaction reliability and user-centric evaluation of AI agents
  - Responsible AI and AI safety engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
  - Case studies from certain high priority domains (e.g., financial services, science discovery, health, environment, energy)
 
 
-**Two types of contributions will be considered:**
+**Three types of contributions will be considered:**
 
 - A research or experience full paper with 8 pages max. Papers describing the challenges, starting results, vision papers, or the experience papers from or in cooperation with the practitioners are encouraged.
 - A short research or experience paper with 4 pages max. The same topics as for long papers.
+- An extended abstract with 5 pages max. This is free of APC changes.
 
 ### Submission Guidelines
 1. All submissions must be in English and in PDF format. Papers must not exceed the page limits that are listed above. It is not possible to pay for extra pages.
-2. The Single-Anonymous Review process is employed by RAIE'25.
+2. The Single-Anonymous Review process is employed by RAIE'26.
 
-Other detailed submission policies and guidelines for RAIE'25 are in line with the [ICSE Research Track Submission Process](https://conf.researchr.org/track/icse-2025/icse-2025-research-track#submission-process). Please note all papers must conform to the IEEE conference proceedings template, specified in the IEEE Conference Proceedings Formatting Guidelines (title in 24pt font and full text in 10pt type, LaTeX users must use \documentclass[10pt,conference]{IEEEtran} without including the compsoc or compsocconf options).
+Other detailed submission policies and guidelines for RAIE'26 are in line with the [ICSE Research Track Submission Process](https://conf.researchr.org/track/icse-2026/icse-2026-research-track#submission-process). 
 
 
 ### Important Dates
 
-**Submission Deadline:** 11 November 2024
+**Submission Deadline:** 20 October 2025
 <br>
-**Notification of Acceptance:**  1 December 2024
+**Notification of Acceptance:**  24 November 2025
 <br>
-**Camera Ready:** 5 February 2025
+**Camera Ready:** 26 January 2026
 
 ### Organizing Committee
 
 #### Workshop Organisers
-- **Qinghua Lu** - *CSIRO's Data61*, Sydney, Australia ([qinghua.lu@data61.csiro.au](mailto:qinghua.lu@data61.csiro.au))  
-- **Foutse Khomh** - *Polytechnique Montreal*, Montreal, Quebec, Canada ([foutse.khomh@polymtl.ca](mailto:foutse.khomh@polymtl.ca))
+- **Jieshan Chen** - *CSIRO's Data61*, Sydney, Australia ([jieshan.chen@data61.csiro.au](mailto:jieshan.chen@data61.csiro.au))  
 - **Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
-- **Maximilian Poretschkin** - *Fraunhofer*, Sankt Augustin, Germany ([maximilian.poretschkin@iais.fraunhofer.de](mailto:maximilian.poretschkin@iais.fraunhofer.de))
-- **Muneera Bano** - *CSIRO's Data61*, Melbourne, Australia ([muneera.bano@data61.csiro.au](mailto:muneera.bano@data61.csiro.au))
 
 
 #### Program Committee
