--- a/RAIE2026.md
+++ b/RAIE2026.md
@@ -69,6 +69,8 @@ Other detailed submission policies and guidelines for RAIE'26 are in line with t
 <br>
 **Camera Ready:** 26 January 2026
 
+### Organization
+
 #### Steering Committee
 
 - **Liming Zhu** - *CSIRO's Data61*, Sydney, Australia ([liming.zhu@data61.csiro.au](mailto:liming.zhu@data61.csiro.au))
@@ -77,7 +79,6 @@ Other detailed submission policies and guidelines for RAIE'26 are in line with t
 - **Maximilian Poretschkin** - *Fraunhofer Institute for Intelligent Analysis and Information Systems IAIS*, Germany
 - **Muneera Bano** - *CSIRO's Data61*, Sydney, Australia ([muneera.bano@data61.csiro.au](mailto:muneera.bano@data61.csiro.au))
 
-### Organizing Committee
 
 #### Workshop Organisers
 - **Jieshan Chen** - *CSIRO's Data61*, Sydney, Australia ([jieshan.chen@data61.csiro.au](mailto:jieshan.chen@data61.csiro.au))  
