--- a/RAIE2026.md
+++ b/RAIE2026.md
@@ -69,7 +69,7 @@ Other detailed submission policies and guidelines for RAIE'26 are in line with t
 <br>
 **Camera Ready:** 26 January 2026
 
-### Organization
+### Organising Committee
 
 #### Workshop Organisers
 - **Jieshan Chen** - *CSIRO's Data61*, Sydney, Australia ([jieshan.chen@data61.csiro.au](mailto:jieshan.chen@data61.csiro.au))  
