--- a/RAIE2026.md
+++ b/RAIE2026.md
@@ -69,9 +69,9 @@ Other detailed submission policies and guidelines for RAIE'26 are in line with t
 <br>
 **Camera Ready:** 26 January 2026
 
-### Organising Committee
+### Workshop Organisers
 
-#### Workshop Organisers
+#### Organising Committee
 - **Jieshan Chen** - *CSIRO's Data61*, Sydney, Australia ([jieshan.chen@data61.csiro.au](mailto:jieshan.chen@data61.csiro.au))  
 - **Apostol T. Vassilev** - *NIST*, Washington DC, US ([apostol.vassilev@nist.gov](mailto:apostol.vassilev@nist.gov))
 
