--- a/RAIE2026.md
+++ b/RAIE2026.md
@@ -43,7 +43,7 @@ Topics of interests include, but are not limited to:
  - Operationalisation of laws (e.g., EU AI Act) and standards
  - Human aspect of responsible AI and AI safety engineering
  - Evaluation of AI agent behaviors and the consequences, reasoning reliability and risk analysis
- - Human-AI interaction reliability and user-centric evaluation of AI agents
+ - Human-AI interaction and collaboration reliability, and user-centric evaluation of AI agents
  - Responsible AI and AI safety engineering for next-generation foundation model based AI systems (e.g., LLM-based agents) 
  - Case studies from certain high priority domains (e.g., financial services, science discovery, health, environment, energy)
 
